Updated by task 'AutomatedMDTask_1675875184382_TM-MT_1675875220091'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/f3a7fe1adc438d0fce977ba01b77fd99fc75776e

--- a/c-legacy-releases/2022/07202022.md
+++ b/c-legacy-releases/2022/07202022.md
@@ -6,10 +6,10 @@ last-update: July 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: bcbdba6a-9e24-4f84-97ca-65c24ef45707
-source-git-commit: c080dfd0cda5e1c4a16426ad2b13c35af6061536
+source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
 workflow-type: tm+mt
-source-wordcount: '5904'
-ht-degree: 100%
+source-wordcount: '5901'
+ht-degree: 99%
 
 ---
 
@@ -68,7 +68,7 @@ ht-degree: 100%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2022/02162022.html?lang=zh-Hant#status)。
+如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html#status)。
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud - 中央介面元件和管理 {#ecloud}
 
