--- a/c-legacy-releases/2023/01112023.md
+++ b/c-legacy-releases/2023/01112023.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: January 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 1e37d36e07e9b2423a86f5c24a5f0bf8e48a9cc5
+source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
 workflow-type: tm+mt
-source-wordcount: '5166'
-ht-degree: 98%
+source-wordcount: '5163'
+ht-degree: 97%
 
 ---
 
@@ -65,7 +65,7 @@ ht-degree: 98%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2022/02162022.html?lang=zh-Hant#status)。
+如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html#status)。
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud - 中央介面元件和管理 {#ecloud}
 
