--- a/c-legacy-releases/2022/10282022.md
+++ b/c-legacy-releases/2022/10282022.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: November 2022
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: edcb07d769a81725e185c7f21da41ebff1344dc5
-workflow-type: ht
-source-wordcount: '4988'
-ht-degree: 100%
+source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
+workflow-type: tm+mt
+source-wordcount: '4985'
+ht-degree: 99%
 
 ---
 
@@ -67,7 +67,7 @@ ht-degree: 100%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2022/02162022.html?lang=zh-Hant#status)。
+如需最新版本資訊，請參閱 Adobe 系統狀態[版本注意事項](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html#status)。
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud - 中央介面元件和管理 {#ecloud}
 
