Updating Old File for core commit

--- a/c-legacy-releases/2020/07162020.md
+++ b/c-legacy-releases/2020/07162020.md
@@ -6,9 +6,9 @@ last-update: July 2020
 author: mfrei
 exl-id: 4f998c30-5fe2-4975-8fdb-8d2d3af5a337
 source-git-commit: fb61ef0e8176d6d78a1378171cb47735db1e9e0c
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4190'
-ht-degree: 86%
+ht-degree: 100%
 
 ---
 
@@ -32,7 +32,7 @@ ht-degree: 86%
 * [Experience Cloud 介面](#ecloud)
 * [Experience Platform](#platform)
 * [Journey Orchestration](#journey-orch)
-* [Analytics](#analytics) 和 [Customer Journey Analytics](#cust-journey) （更新日期：2020年7月14日）
+* [Analytics](#analytics) 和 [Customer Journey Analytics](#cust-journey) (2020 年 7 月 14 日更新)
 * [Audience Manager](#aam)
 * [Experience Manager](#aem)
 * [Campaign](#ac)
@@ -42,7 +42,7 @@ ht-degree: 86%
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html) (Primetime 說明頁面連結)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎? 請造訪 [Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/adobe.png) Adobe 系統狀態 {#status}
 
@@ -109,7 +109,7 @@ Adobe 持續更新網域和介面標題，以統一及提升您使用所有 Expe
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Adobe Experience Platform {#platform}
 
-[!DNL Experience Platform] 和應用程式服務的發行說明，內容包括 [!DNL Experience Platform Launch,] [!UICONTROL Offers]、[!UICONTROL People]、[!UICONTROL Places]、[!UICONTROL Mobile Services]、安全性公告。
+[!DNL Experience Platform] 和應用程式服務的發行說明，內容包括[!DNL Experience Platform Launch,] [!UICONTROL 選件]、[!UICONTROL 人員]、[!UICONTROL 地點]、[!UICONTROL 行動服務]和安全性公告。
 
 最新發行日期：**2020 年 6 月 10 日**
 
@@ -117,7 +117,7 @@ Adobe 持續更新網域和介面標題，以統一及提升您使用所有 Expe
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Journey Orchestration {#journey-orch}
 
-不論客戶處於哪個歷程階段，Adobe Experience Platform 能聰明地即時預測每個人的需求，以便能大規模協調不同體驗管道的客戶歷程。
+不論客戶處於哪個歷程階段，Adobe Experience Platform 均可聰明地即時預測每個人的需求，以便大規模協調不同體驗管道的客戶歷程。
 
 ### Journey Orchestration 的其他資源
 
@@ -131,7 +131,7 @@ Adobe 持續更新網域和介面標題，以統一及提升您使用所有 Expe
 * [Customer Journey Analytics 新功能](#cust-journey)
 * [Media Analytics 新功能](#media-aa)
 * [Adobe Analytics 中的修正](#aa-fixes)
-* [給Analytics管理員的重要通知](#aa-notices) （更新日期：2020年7月13日）
+* [Analytics 管理員重要事項](#aa-notices) (2020 年 7 月 13 日更新)
 * [最新 Adobe Analytics 課程與教學課程](#tutorials-analytics)
 * [AppMeasurement](#appm)
 
@@ -204,7 +204,7 @@ Audience Manager 的新功能、修正項目、說明文件和教學課程。
 
 發行日期：**2020 年 7 月 16 日**
 
-### Adobe Audience Manager 新功能和修正項目
+### Adobe Audience Manager 的新功能和修正項目
 
 * 修正客戶無法將部分區段對應至 Amazon 目的地的問題。(AAM-54373)
 * 修正客戶在新分頁中開啟區段時，瀏覽器畫面凍結的問題。(AAM-55213)
@@ -348,12 +348,12 @@ Adobe Advertising Cloud 發行說明。
 
 | 功能 | 說明 |
 | -----------| ---------- |
-| GDPR透明與同意架構 | Advertising Cloud正在將對IAB透明與同意架構的支援升級至2020年8月15日之前的2.0版。 目前客戶端不需要進行任何變更。  身為每個客戶的資料處理者，Adobe Advertising Cloud具備可供客戶履行GDPR所規定之義務的功能，且這些義務適用於使用我們的產品和服務。 |
-| Audience Manager整合 | (僅限採用Adobe Experience Platform的Adobe Audience Manager客戶使用Beta版)DSP可以透過Adobe Experience Platform將包含廣告商廣告參與資料的可操作記錄檔傳送至Audience Manager。 在Audience Manager中，廣告商可以使用資料來進行進階細分，以及在Audience Optimization報表等深入分析工具中使用。 |
-| 以人物為基礎的跨裝置圖表鎖定目標 | 自助式DSP客戶可使用裝置圖表(AdobeDevice Co-op或LiveRamp)，以人物為基礎鎖定目標並管理新促銷活動的頻率。 這可確保廣告商可在其擁有的裝置上觸及其受眾，但限制曝光。 此外，跨版位的跨裝置鎖定目標設定大量編輯現在於測試版中。 若要啟用您帳戶的測試版，請連絡您的Adobe客戶經理。 |
-| 網站目標定位 | 「黑名單」和「白名單」已重新命名為「blocked(sites)」和「targeted(sites)」等更公平的詞語。 |
-| Flashtalking Ads | DSP現在可透過單一廣告建立和大量第三方廣告建立工作流程，自動插入所有Flashtalking廣告標籤的點按巨集。 |
-| 報表 | (僅限Adobe Experience Platform客戶測試版)Advertising Cloud Search的全新跨管道報表可統一檢視DSP和搜尋的媒體支出，並提供DSP版位和搜尋促銷活動的每日關鍵量度。 |
+| GDPR 透明度和同意框架 | Advertising Cloud 將在 2020 年 8 月 15 日之前將其對 IAB 透明度和同意框架的支援升級到 2.0 版。此時，客戶端無需進行任何變更。Adobe Advertising Cloud 身為我們每一位客戶的資料處理者，有能力讓客戶履行 GDPR 規定中與使用我們的產品和服務適用的義務。 |
+| Audience Manager 整合 | (僅限使用 Adobe Experience Platform 的 Adobe Audience Manager Beta 版客戶) DSP 可以透過 Adobe Experience Platform 將包含廣告商廣告參與資料的可操作記錄檔傳送到 Audience Manager。在 Audience Manager 中，廣告商可以在深入分析工具中使用進階細分和使用情況的資料，例如 Audience Optimization 報告。 |
+| 以人物為基礎跨裝置圖表目標定位 | 自助式 DSP 客戶可以使用裝置圖表 (Adobe Device Co-op 或 LiveRamp)，針對新的行銷活動進行以人物為基礎的目標定位及頻率管理。這確保廣告商能夠在受眾擁有的裝置上觸及目標對象，並限制曝光度。 此外，跨位置大量編輯跨裝置目標定位設定現在提供 Beta 版。 要為您的帳戶啟用 Beta 版，請連絡您的 Adobe 客戶經理。 |
+| 網站目標定位 | 「封鎖名單」和「允許名單」已重新命名為較為對等的術語「已封鎖 (網站)」和「已鎖定目標 (網站)」。 |
+| Flashtalking 廣告 | DSP 現在透過單個廣告建立和大量第三方廣告建立工作流程自動為所有 Flashtalking 廣告標記插入點擊巨集。 |
+| 報表 | (僅限 Adobe Experience Platform Beta 版客戶) Advertising Cloud Search 中的新跨管道報告提供了跨 DSP 和 Search 的媒體支出的統一檢視，以及 DSP 位置和 Search 行銷活動的每日關鍵量度。 |
 
 ### [!DNL Advertising Cloud Search] 中的新功能 {#adcloud-search}
 
@@ -367,7 +367,7 @@ Adobe Advertising Cloud 發行說明。
 
 ## ![圖示](/assets/magento.png) [!DNL Magento] {#magento}
 
-如需 Magento 發行說明，請參閱：
+如需 Magento 版本注意事項，請參閱：
 
 * [Magento Commerce 2.3.4](https://devdocs.magento.com/guides/v2.3/release-notes/release-notes-2-3-4-commerce.html)
 * [Magento Open Source 2.3.4](https://devdocs.magento.com/guides/v2.3/release-notes/release-notes-2-3-4-open-source.html)
