Updating Old File for core commit

--- a/c-legacy-releases/2022/10282022.md
+++ b/c-legacy-releases/2022/10282022.md
@@ -6,9 +6,9 @@ last-update: November 2022
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4985'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -24,7 +24,7 @@ ht-degree: 99%
 
 此頁面可讓您存取 Experience Cloud 產品的版本注意事項頁面，以及 Experience League 上的最新教學課程、課程和活動。
 
-最新更新：**2022 年 1 月 6 日**
+上次更新日期：**2022 年 1 月 6 日**
 
 * [[!DNL Experience League] 活動](#events) (更新於 **1 月 6 日**)
 * [[!DNL Adobe System Status]](#status)
@@ -48,7 +48,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -89,7 +89,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 最新版本：**2022 年 11 月 23 日**
 
-* [Experience Platform 版本注意事項](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)
 
 ### 最新 Experience Platform 教學課程與其他課程 {#tutorials-platform}
 
@@ -209,7 +209,7 @@ _新功能_
 
 [調適型表單精靈](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-an-adaptive-form/create-an-adaptive-form-on-forms-cs/creating-adaptive-form.html?lang=zh-Hant)：[!DNL AEM Forms] 為商業使用者提供好用的精靈，以便快速撰寫[!UICONTROL 調適型表單]。 此精靈具有快速索引標籤導覽，可輕鬆選取預先設定的範本、樣式、欄位和提交選項來建立調適型表單。 此版本引進了對此精靈的以下改良：
 
-* **選取或取消選取欄位：**&#x200B;此精靈可讓您根據 JSON 和表單資料模型結構描述建立調適型表單。 您現在可以選取結構描述中的欄位子集以納入調適型表單中。 選取的欄位會轉換成對應的調適型表單資料結構元件，以快速建立所需的調適型表單。
+* **選取或取消選取欄位：**&#x200B;此精靈可讓您根據 JSON 和表單資料模型綱要建立調適型表單。 您現在可以選取綱要中的欄位子集以納入調適型表單中。 選取的欄位會轉換成對應的調適型表單資料結構元件，以快速建立所需的調適型表單。
 
 * **使用靜態範本：**&#x200B;已投資於舊型靜態範本的客戶可以在此精靈中使用靜態範本來撰寫調適型表單，繼續他們的雲端採用之旅。 這讓客戶有更多時間可以將舊的靜態範本移轉到可編輯的新式範本。
 
