--- a/c-legacy-releases/2022/10052022.md
+++ b/c-legacy-releases/2022/10052022.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 63424213-0589-47ea-865f-47ba17e97b85
 source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '6615'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -49,7 +49,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -92,7 +92,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 最新版本：**2022 年 9 月 28 日**
 
-* [Experience Platform 版本注意事項](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)
 
 ### 最新 Experience Platform 教學課程與其他課程 {#tutorials-platform}
 
@@ -153,7 +153,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 9 月 | [適用於 Customer Journey Analytics 的對象發佈](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/audiences/audience-publishing-for-cja.html) | 影片 | 了解如何使用 Customer Journey Analytics 將您從分析中發現的對象發佈到 Adobe Experience Platform 即時客戶個人檔案，來使用 Adobe Real-Time Customer Data Platform 或 Adobe Journey Optimizer 進行區段啟用。 |
+| 2022 年 9 月 | [適用於 Customer Journey Analytics 的對象發佈](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/audiences/audience-publishing-for-cja.html) | 影片 | 了解如何使用 Customer Journey Analytics 將您從分析中發現的對象發佈到 Adobe Experience Platform 即時客戶設定檔，來使用 Adobe Real-Time Customer Data Platform 或 Adobe Journey Optimizer 進行區段啟用。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -211,7 +211,7 @@ _新功能_
 
 [調適型表單精靈](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-an-adaptive-form/create-an-adaptive-form-on-forms-cs/creating-adaptive-form.html?lang=zh-Hant)：[!DNL AEM Forms] 為商業使用者提供好用的精靈，以便快速撰寫[!UICONTROL 調適型表單]。 此精靈具有快速索引標籤導覽，可輕鬆選取預先設定的範本、樣式、欄位和提交選項來建立調適型表單。 此版本引進了對此精靈的以下改良：
 
-* **選取或取消選取欄位：**&#x200B;此精靈可讓您根據 JSON 和表單資料模型結構描述建立調適型表單。 您現在可以選取結構描述中的欄位子集以納入調適型表單中。 選取的欄位會轉換成對應的調適型表單資料結構元件，以快速建立所需的調適型表單。
+* **選取或取消選取欄位：**&#x200B;此精靈可讓您根據 JSON 和表單資料模型綱要建立調適型表單。 您現在可以選取綱要中的欄位子集以納入調適型表單中。 選取的欄位會轉換成對應的調適型表單資料結構元件，以快速建立所需的調適型表單。
 
 * **使用靜態範本：**&#x200B;已投資於舊型靜態範本的客戶可以在此精靈中使用靜態範本來撰寫調適型表單，繼續他們的雲端採用之旅。 這讓客戶有更多時間可以將舊的靜態範本移轉到可編輯的新式範本。
 
@@ -485,7 +485,7 @@ Last updated: **August 9, 2022**
 
 ### [!DNL Advertising Cloud DSP] 中的新功能 {#adcloud-dsp}
 
-最新更新：**2022 年 10 月 6 日**
+上次更新日期：**2022 年 10 月 6 日**
 
 | 功能 | 說明 |
 | ------- | ----------- |
@@ -504,7 +504,7 @@ Last updated: **August 9, 2022**
 |  | ([!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 您現在可以在[!UICONTROL 行銷活動]檢視中使用 Bulksheet，在搜尋行銷活動中建立和管理多媒體廣告。廣告具有創意類型「[!UICONTROL 多媒體廣告]」。<br><br>您可以將含多媒體廣告的行銷活動包含在，含有任何支出策略的標準產品組合或混合產品組合中，[!UICONTROL 目標曝光比重]除外 (混合產品組合尚未支援)。<br><br>您現在可以在「[!UICONTROL 行銷活動]」檢視中，檢視現有對象行銷活動，以表格和趨勢圖表格式呈現成效資料。廣告層級的成效資料也可在報告和 [!DNL Analytics] 中使用 (適用於與 [!DNL Analytics] 整合的廣告商)。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 發佈者曝光比重量度現在可作為下列行銷活動管理檢視和報告中的欄：<ul><li>行銷活動管理檢視：所有行銷活動實體檢視，[!UICONTROL 廣告]除外。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>基本報告：除了[!UICONTROL 廣告變體]、[!UICONTROL 每小時行銷活動]和[!UICONTROL 網路條件約束]報告的所有報告。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>專業報告：[!UICONTROL Adwords 和 Bing 對象目標]、[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重]報告。</li></ul><b>請注意：</b>因為[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重] 報告現在是多餘的，在未來版本將被刪除。如果您將這些報告類型用於排程報告、範本或試算表摘要，請轉換改用[!UICONTROL 行銷活動]和[!UICONTROL 關鍵字]報告。與此同時，一些現有量度在這些報告類型中重複。 |
 | [!UICONTROL 轉換值規則] | ([!DNL Google Ads accounts]) [!UICONTROL 轉換值規則]檢視現在已移出 Beta 版，為一般可用功能。用它來檢視您現有的[!DNL Google Ads]轉換值規則。在個人帳戶層級或更低層級具有 [!DNL Google Ads]轉換追蹤的廣告商也可以建立和管理規則。 |
-| [!UICONTROL 廣告深入解析] | [!UICONTROL 錯失的曝光比重]和[!UICONTROL 查詢交叉比對]分析現在已移出 Beta 版，為一般可用功能。 |
+| [!UICONTROL Advertising Insights] | [!UICONTROL 錯失的曝光比重]和[!UICONTROL 查詢交叉比對]分析現在已移出 Beta 版，為一般可用功能。 |
 | [!UICONTROL Recommendations] | (僅限[!DNL Google Ads]帳戶) [!UICONTROL Recommendations]功能現在已移出 Beta 版，為一般可用功能。<ul><li>查看尚未針對帳戶執行的所有 [!DNL Google Ads]建議概覽。</li><li>套用和拒絕帳戶建議。</li><li>查看套用至帳戶的各個建議記錄。</li></ul> |
 | [!UICONTROL 匯入行銷活動] | (Beta 版功能) 您可以從「[!UICONTROL 工具] > [!UICONTROL 匯入行銷活動]」，將您的[!DNL Google Ads]最高成效行銷活動 (包括詳細目錄圖片) 匯入[!DNL Microsoft Advertising]智慧購物行銷活動。匯入行銷活動後，您可以檢查匯入工作的狀態、檢閱任何錯誤記錄檔，以及編輯、暫停或刪除匯入排程。 |
 
