Updating Old File for core commit

--- a/c-legacy-releases/2022/05182022.md
+++ b/c-legacy-releases/2022/05182022.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: c25cdfc7-0e06-4179-867b-e5edd9e1b919
 source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5067'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -47,7 +47,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -94,7 +94,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 預計發行日期：**2022 年 5 月 25 日**
 
-* [Experience Platform 版本注意事項](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
 
 ### 新 [!DNL Experience Platform] 教學課程和其他課程 {#tutorials-platform}
 
