Updating Old File for core commit

--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: d195f05f-454f-4ef0-ba30-0453868fe426
 source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '6525'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -47,7 +47,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -95,7 +95,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 發行日期：**2022 年 9 月 28 日**
 
-* [Experience Platform 版本注意事項](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)- (2022 年 8 月 24 日)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)- (2022 年 8 月 24 日)
 
 ### [!DNL Adobe Mobile] SDK
 
@@ -139,7 +139,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 9 月 | [適用於 Customer Journey Analytics 的對象發佈](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/audiences/audience-publishing-for-cja.html) | 影片 | 了解如何使用 Customer Journey Analytics 將您從分析中發現的對象發佈到 Adobe Experience Platform 即時客戶個人檔案，來使用 Adobe Real-Time Customer Data Platform 或 Adobe Journey Optimizer 進行區段啟用。 |
+| 2022 年 9 月 | [適用於 Customer Journey Analytics 的對象發佈](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/audiences/audience-publishing-for-cja.html) | 影片 | 了解如何使用 Customer Journey Analytics 將您從分析中發現的對象發佈到 Adobe Experience Platform 即時客戶設定檔，來使用 Adobe Real-Time Customer Data Platform 或 Adobe Journey Optimizer 進行區段啟用。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -486,7 +486,7 @@ Last updated: **August 9, 2022**
 | [!UICONTROL 行銷活動]、[!UICONTROL 報告] | 在接下來的幾週，會有更多發佈者印象分享指標將作為行銷活動管理檢視和報告中的欄。 |
 | [!UICONTROL 轉換值規則] | ([!DNL Google Ads accounts]帳戶; 測試版功能) 您現在可以從 [!UICONTROL 最佳化] > [!UICONTROL 轉換值規則] 查看現有的轉換值規則。在個人帳戶層級或更低層級具有 [!DNL Google Ads] 轉換追蹤的廣告商也可以建立和管理規則。 |
 | [!UICONTROL 產品組合] | (選擇加入測試版功能; [!DNL Google Ads]帳戶) 混合產品組合中採用 [!UICONTROL 最大化轉換] 競標策略的 [!DNL YouTube] 行銷活動現在包含在自訂模擬結果中。混合產品組合只能包含 [!DNL YouTube] 行銷活動。<br><br>若要參與測試版計劃，請連絡您的客戶團隊。 |
-| [!UICONTROL 廣告深入解析] | [!UICONTROL 廣告深入解析]檢視具有全新的外觀和工作流程，並以可提高效能和可靠性的新基礎結構為基礎。現在，只需按一下分析名稱，選擇或輸入設定，然後按一下[!UICONTROL 產生分析]。<br><br>若要臨時返回舊版檢視，請啟用右上角的[!UICONTROL 切換到舊版 UI]。舊版檢視將在 9 月底移除。 |
+| [!UICONTROL Advertising Insights] | [!UICONTROL Advertising Insights] 檢視具有全新的外觀和工作流程，並以可提高效能和可靠性的新基礎結構為基礎。現在，只需按一下分析名稱，選擇或輸入設定，然後按一下[!UICONTROL 產生分析]。<br><br>若要臨時返回舊版檢視，請啟用右上角的[!UICONTROL 切換到舊版 UI]。舊版檢視將在 9 月底移除。 |
 |  | 現已推出[!UICONTROL 查詢交叉比對測試版]分析。 |
 | [!UICONTROL 報表] | (僅 [!DNL Google Ads] 帳戶) 新的專業報告 [!UICONTROL RSA 資產報告]會顯示一個或多個產品組合或一個或多個帳戶、行銷活動和廣告群組中的回應式搜尋廣告 (RSA) 的每個資產 ([!UICONTROL 創意標題]或[!UICONTROL 描述]) 的印象指標。根據預設，對於在指定資料范圍內至少獲得一次印象的各個資產，資料會包含一列，即使資產在報告期間被停用 (移除) 也是如此。**備註：**&#x200B;當您選擇「[!UICONTROL 包括沒有績效資料的列]」選項時，資料仍然不會包括從未收到資料的資產資料。 |
 |  | [!UICONTROL 廣告變體報告]中提供了對回應式搜尋廣告 (RSA) 的額外支援：<ul><ul>(僅 [!DNL Google Ads] 帳戶)在[!UICONTROL 欄]設定中，新的「[!UICONTROL 廣告強度]」欄表示 RSA 遵循 [!DNL Google Ads] 最佳實務績效的程度。[!UICONTROL 行銷活動] > [!UICONTROL 廣告]檢視中提供了相同的欄。[!DNL Microsoft® Advertising] 尚未透過其 API 啟用類似的支援。</li><li>在[!UICONTROL 欄]設定中，您可以依「[!UICONTROL 創意標題]」和「[!UICONTROL 說明]」對報告結果進行排序。</li><li>在[!UICONTROL 進階篩選器]設定中，您可以依[!UICONTROL 廣告文字]欄位進行篩選，該欄位會同時套用至「[!UICONTROL 廣告標題]」和「[!UICONTROL 說明]」。</li></ul> |
