Updating Old File for core commit

--- a/c-legacy-releases/2022/04202022.md
+++ b/c-legacy-releases/2022/04202022.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 854aca4b-2886-49e1-a0d1-4bf7bbf725e9
 source-git-commit: f3a7fe1adc438d0fce977ba01b77fd99fc75776e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5999'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -47,7 +47,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -96,7 +96,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 發行日期：**2022 年 4 月 27 日**
 
-* [Experience Platform 版本注意事項](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
 
 ### 新 [!DNL Experience Platform] 教學課程和其他課程 {#tutorials-platform}
 
@@ -264,7 +264,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
       * 您必須使用 AEM 版本 `2021.12.6151.20211217T120950Z` 或更高版本並[選擇加入 Dispatcher 工具的彈性模式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/content-delivery/disp-overview.html?lang=zh-Hant#validation-debug)，才能使用此功能。
       * 此功能計劃在 2022.02.0 發行後的兩週內分階段推出。
    * Cloud Manager 登陸頁面體驗已更新，改進導覽功能、可在網格/圖磚視圖之間輕鬆切換，還有快顯視窗以提供快速程式摘要。
-   * 新的失敗臨界值 (`< D`) 已新增到 [可靠性評定量度](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/code-quality-testing.html?lang=zh-Hant#understanding-code-quality-rules)。
+   * 新的失敗臨界值 (`< D`) 已新增到[可靠性評定量度](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/code-quality-testing.html?lang=zh-Hant#understanding-code-quality-rules)。
 
       * 存在嚴重影響系統穩定性的品質問題 (主要與無效索引和工作流程相關) 的客戶，在這些問題得到解決之前無法部署。
    * BannedPath [品質規則](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/code-quality-testing.html?lang=zh-Hant#understanding-code-quality-rules)的嚴重程度已從阻止變更為嚴重。
@@ -500,8 +500,8 @@ Last updated: **October 27, 2021**
 | [!UICONTROL 受眾] | (符合客戶比對資格的 [!DNL Microsoft Advertising] 資格的帳戶) 所有使用者現在都可以上傳附有電子郵件地址的 CSV 檔案來建立和管理客戶比對受眾。資料必須使用 SHA-256 演算法進行雜湊處理。 |
 | [!UICONTROL 行銷活動] | 以下 Beta 版功能可供選擇加入的廣告商使用：<ul><li>([!DNL Microsoft Advertising] 帳戶) 為您在 [!DNL Microsoft Audience Network] 上的現有原生廣告行銷活動提供同步、唯讀可見度和報告 (包括瀏覽資料) 支援，其中也包括 [!DNL Microsoft Audience Ads]。</li><li>([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶) 能夠從 Advertising Cloud Search 將您的[!DNL Google Ads] 行銷活動和行銷活動結構匯入 [!DNL Microsoft Advertising]。</li></ul>如果您有意願加入 Beta 版計劃，請連絡您的 Adobe 客戶經理。 |
 | [!UICONTROL 行銷活動]<br><br>[!UICONTROL 專案組合] | ([!DNL Microsoft Advertising] 行銷活動) 支援適用於以下競標策略：<ul><li>(一般可用性) [!UICONTROL 盡量爭取轉換]、[!UICONTROL 目標 CPA] 和[!UICONTROL 目標廣告支出回報率]：這些策略現在可供所有人使用。您可以將具有這些競標策略的搜尋行銷活動新增到混合 (但不是標準) 組合中。</li><li>(Beta 版功能) [!UICONTROL 目標曝光比重]：如果您正在參與混合最佳化 Beta 版，您可以使用此策略設定行銷活動，並可選擇設定目標曝光比重、目標廣告位置和最高每次點按成本。警告：混合專案組合尚不支援此選項，因此無法將其新增到標準專案組合中。</li><li>(Beta 版功能) [!UICONTROL 最大化點按次數]：如果您正在參與混合最佳化 Beta 版，您可以使用此策略設定行銷活動，並可選擇設定目標最高每次點按成本。您可以在標準或混合投資組合中加入採用此策略的行銷活動。若要在混合組合中使用此策略，組合的目標必須僅包含 [!DNL Adobe] 屬性 (量度)，並且您必須啟用將 Advertising Cloud Search 目標上傳到 [!DNL Microsoft Ads]。</li></ul>如果您尚未參與混合最佳化 Beta 版並想加入，請連絡您的 [!DNL Adobe] 客戶經理。 |
-| [!UICONTROL 廣告深入分析] | 除了[!UICONTROL 查詢交叉比對]和[!UICONTROL 混合投資組合設定準備]之外的所有深入分析，現在都已完成測試。 |
-| [!UICONTROL 行銷活動]<br><br>[!UICONTROL 廣告深入分析] | (4 月 11 日；[!DNL Google Ads] 帳戶) Advertising Cloud Search 已將舊版 [!DNL Google AdWords API] 中的所有 API 呼叫變成最新的 [!DNL Google Ads API]。移到新 [!DNL Google Ads API] 以確保現有功能的連續性，並允許存取 [!DNL Google's] 的最新 [!DNL Ads] 功能。<br><br>某些功能尚未更新到新的 API，所以暫時無法使用：<ul><li>位置延伸模組：<ul>[!UICONTROL 延伸模組]檢視中看不到位置延伸模組。</li><li>您無法建立延伸模組。</li><li>對位置進行篩選無法運作。</li></li></ul><li>[!UICONTROL 廣告深入分析]：無法使用[!UICONTROL 錯失的曝光比重]和[!UICONTROL 查詢交叉比對 Beta 版]分析。</li></ul>我們預計在 4 月底之前恢復位置延伸模組。一旦我們確定受影響的[!UICONTROL 廣告深入分析]模組何時也能恢復，我們會傳送包含估計日期的更新資訊。 |
+| [!UICONTROL Advertising Insights] | 除了[!UICONTROL 查詢交叉比對]和[!UICONTROL 混合投資組合設定準備]之外的所有深入分析，現在都已完成測試。 |
+| [!UICONTROL 行銷活動]<br><br>[!UICONTROL Advertising Insights] | (4 月 11 日；[!DNL Google Ads] 帳戶) Advertising Cloud Search 已將舊版 [!DNL Google AdWords API] 中的所有 API 呼叫變成最新的 [!DNL Google Ads API]。移到新 [!DNL Google Ads API] 以確保現有功能的連續性，並允許存取 [!DNL Google's] 的最新 [!DNL Ads] 功能。<br><br>某些功能尚未更新到新的 API，所以暫時無法使用：<ul><li>位置延伸模組：<ul>[!UICONTROL 延伸模組]檢視中看不到位置延伸模組。</li><li>您無法建立延伸模組。</li><li>對位置進行篩選無法運作。</li></li></ul><li>[!UICONTROL Advertising Insights]：無法使用[!UICONTROL 錯失的曝光比重]和[!UICONTROL 查詢交叉比對 Beta 版]分析。</li></ul>我們預計在 4 月底之前恢復位置延伸模組。一旦我們確定受影響的 [!UICONTROL Advertising Insights] 模組何時也能恢復，我們會傳送包含估計日期的更新資訊。 |
 | 與 Adobe Analytics 整合 | (4 月 7 日) 在 Advertising Cloud 傳送到 [!DNL Analytics] 的資料摘要中，[!DNL Google Ads] 和 [!DNL Microsoft Advertising] 回應式搜尋廣告 (RSA) 的資料在收到新點擊時被重新分類為[!UICONTROL 廣告類型]「[!UICONTROL 回應式搜尋廣告]」。以前，資料包含在[!UICONTROL 廣告類型]「[!UICONTROL 文字廣告]」中。非作用中行銷活動中的 RSA 不會被重新分類。<br><br>對於重新分類的 RSA，[!UICONTROL 回應式廣告標題]現在有第一個標題，[!UICONTROL 回應式廣告描述]現在有第一個描述。 |
 
 {style=&quot;table-layout:auto&quot;}
