Updated by task 'AutomatedMDTask_1678295501571_TM-MT_1678295531469'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/947904aa0710f671b2fa1854c3dc19d1f85fa91b

--- a/c-legacy-releases/2021/04222021.md
+++ b/c-legacy-releases/2021/04222021.md
@@ -5,8 +5,8 @@ doc-type: release notes
 last-update: April 2021
 author: mfrei
 exl-id: cab3f413-26dc-45c5-a6b8-c5399a9f1a89
-source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
-workflow-type: ht
+source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+workflow-type: tm+mt
 source-wordcount: '5540'
 ht-degree: 100%
 
@@ -14,7 +14,7 @@ ht-degree: 100%
 
 # Adobe Experience Cloud 發行說明 - 2021 年 4 月
 
-![橫幅](assets/experience-cloud-banner-3.png)
+![橫幅](assets/release-notes-header.png)
 
 Experience Cloud 解決方案和服務每月都會更新。此頁面是尋找 [!DNL Experience Cloud] 和 Experience Platform 的最新版更新、文件與教學課程的中央位置。您也可以尋找適用於 [!DNL Creative Cloud for Enterprise] 和 [!DNL Document Cloud] 的新文件。
 
