Updated by task 'AutomatedMDTask_1681313871106_TM-MT_1681313900779'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/58bac0432749412b2cbd94bf48e9aa3d0ac3e250

--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: ae99f64b4dcf2b827c7979ccd2355d560e1b330d
+source-git-commit: 58bac0432749412b2cbd94bf48e9aa3d0ac3e250
 workflow-type: tm+mt
-source-wordcount: '4634'
-ht-degree: 88%
+source-wordcount: '4478'
+ht-degree: 87%
 
 ---
 
@@ -95,17 +95,7 @@ ht-degree: 88%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-發行日期：**2023 年 2 月 15 日**
-
-**新增功能**
-
-* [!DNL Status] 已新增 API 支援，可讓您直接呼叫 Adobe 伺服器來查詢和查看，例如 [status.adobe.com](https://status.adobe.com/) UI。您可以使用這些 API 整合到您的監視系統或儀表板中，以查看來自 Adobe Status 的即時事件。可以根據產品、產品供應、地區、環境 (如果可用)、地區設定和事件類型篩選事件。
-
-| 功能 | 說明 |
-| ------- | -------|
-| Adobe Status API | <ul><li>Adobe Status API 提供 Adobe 雲端產品及服務中斷、作業中斷和維護事件的詳細資訊和即時更新。</li><li>API 必須在 [Adobe Developer Console](https://developer.adobe.com/console) 完成設定才能使用。您的組織必須擁有至少一個 Adobe 產品的權益才能存取 Adobe API。需要具有正確權限的開發人員主控台帳戶。</li><li>請在[此處](https://developer.adobe.com/adobe-status/)查看文件並按照設定指南操作。</li><li>設定完成後，您可以使用 [API 參考文件](https://developer.adobe.com/adobe-status/api/)查看可用的 API 和呼叫它們的簽名。</li></ul> |
-
-{style="table-layout:auto"}
+請參閱 [發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status) Adobe狀態以檢視最新更新。
 
 +++
 
