Updating Old File for core commit

--- a/c-legacy-releases/2023/01112023.md
+++ b/c-legacy-releases/2023/01112023.md
@@ -7,7 +7,7 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 22e2e4b0-b76a-429e-be83-b8a3c9f6e455
 source-git-commit: d3cadefbfc28edbc62fd90cb49991c9837744e5e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5135'
 ht-degree: 100%
 
@@ -226,7 +226,7 @@ _新功能_
 * 當透過 CTT (內容轉移工具) 的擷取作業進行時，開發人員主控台和 Cloud Manager 中的環境狀態都將顯示為&#x200B;_擷取作業進行中_。
 * 提高 Cloud Manager 管道的可用性和可靠性。
 
-### 適用於 Experience Manager 增強型連接器的 [!DNL Workfront]
+### [!DNL Workfront] for Experience Manager 增強型連接器
 
 Experience Manager 增強型連接器最新 1.9.6 版本的 [!DNL Workfront] 發行日期為 2022 年 12 月 9 日。 如需詳細資訊，請參閱[發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/workfront/release-notes-enhanced-connector-workfront.html?lang=zh-Hant)。
 
