Updating Old File for core commit

--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -6,9 +6,9 @@ last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: d3cadefbfc28edbc62fd90cb49991c9837744e5e
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4667'
-ht-degree: 88%
+ht-degree: 100%
 
 ---
 
@@ -32,8 +32,8 @@ ht-degree: 88%
 
 上次更新日期：**2023 年 4 月 6 日**
 
-* [[!DNL Experience League] 事件](#events) (**更新日期： 2023年4月6日**)
-* [認證](#certification) (**新！ 2023 年 4 月 6 日**)
+* [[!DNL Experience League] 活動](#events) (**2023 年 4 月 6 日**&#x200B;更新)
+* [認證](#certification) (**新增！2023 年 4 月 6 日**)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Experience Cloud] 介面與管理](#ecloud)
 * [[!DNL Experience Platform]](#platform)
@@ -59,31 +59,31 @@ ht-degree: 88%
 
 +++即將到來的活動
 
-* **[!DNL Workfront]** | _連接：策略管理員聊天_ | **4月10日早8點** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,-9nSc9EY3Um-uj0-EaoAPg,7VBCpt8DgEOLA67Jwa7ShA,-f6upnI-xUqzViVU-lSHMg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]** | _連接：策略性管理員聊天_ | **4 月 10 日 @ 8:00 AM CT** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,-9nSc9EY3Um-uj0-EaoAPg,7VBCpt8DgEOLA67Jwa7ShA,-f6upnI-xUqzViVU-lSHMg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Target]** | _Adobe Target社區與馬修·貝利和喬治亞·弗萊利的問答茶歇_ | **4月12日早8:00品脫** |  [註冊](https://adobe.ly/3ZV8gUG)
+* **[!DNL Target]** | _與 Matthew Baillie 和 Georgia Frailey 一同參加 Adobe Target 社群問答咖啡會_ | **4 月 12 日 @ 8:00 AM PT** |  [報名](https://adobe.ly/3ZV8gUG)
 
-* **[!DNL Workfront]** | _學習：Adobe Workfront 23.2版本集合_ | **4月12日@中午12:30 CT** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,ridfURuXEU6az_bX9g1Cxg,pvTHbLZm3kSbU7ZxfauFMQ,ylMqSUM8BkCkwTFYT5Ve1A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]** | _了解：Adobe Workfront 23.2 版概要_ | **4 月 12 日 @ 12:30 PM CT** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,ridfURuXEU6az_bX9g1Cxg,pvTHbLZm3kSbU7ZxfauFMQ,ylMqSUM8BkCkwTFYT5Ve1A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Adobe Summit]** |_再回到Summit一年！_ | **隨選** | [詳細資料](https://business.adobe.com/summit/adobe-summit.html)
+* **[!DNL Adobe Summit]**|_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
 
 請查看[Experience League 活動](https://experienceleague.adobe.com/events/?lang=en)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
-## ![圖示](/assets/certification-badge.png) 認證{#certification}
+## ![圖示](/assets/certification-badge.png)認證{#certification}
 
-請注意所有Adobe認證候選者！ Adobe很高興在此間宣佈推出新Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en) 網站Experience League。
+請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)網站。
 
 +++詳細資訊
 
-認證網站是您為所有人提供的一站式服務 [!DNL Experience Cloud] 認證相關內容，包括：
+認證網站是所有 [!DNL Experience Cloud] 認證相關內容的一站式商店，包括：
 
 * 可用認證
-* Adobe解決方案的認證續約
-* 認證計畫更新
+* Adobe 解決方案的認證續約
+* 認證方案更新
 
-及更多內容！前往 [Adobe認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en) 立即Experience League並開始認證歷程！
+及更多內容！前往 Experience League 上的[Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)，立即開始您的認證之旅！
 
 +++
 
@@ -95,7 +95,7 @@ ht-degree: 88%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-查看最新 [發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status) Adobe狀態。
+請參閱 Adobe 狀態的最新[發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status)。
 
 **新增功能**
 
@@ -107,7 +107,7 @@ ht-degree: 88%
 
 {style="table-layout:auto"}
 
-請參閱 [2023年2月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status) 以了解最新更新。
+如需最近的更新，請參閱[2023 年 2 月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status)。
 
 +++
 
@@ -129,7 +129,7 @@ _在 3 月未更新。_
 
 +++詳細資訊
 
-* [Experience Platform發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)  — 計畫發行 —  **2023年3月29日**
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html) - 預計發行日期 - **2023 年 3 月 29 日**
 
 ### 新 [!DNL Experience Platform] 教學課程和其他課程
 
@@ -619,7 +619,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 報表] | （3月發行）新 [!UICONTROL 家庭] 報表會根據IP位址，而非裝置/Cookie層級，顯示家庭層級各維度的曝光數、觸及和頻率。 報表包含九個維度： [!UICONTROL 行銷活動], [!UICONTROL 套件], [!UICONTROL 版位], [!UICONTROL 網站/應用程式], [!UICONTROL 媒體類型], [!UICONTROL 裝置], [!UICONTROL 對象], [!UICONTROL 創作長度]，以及使用者建立的 [!UICONTROL 標籤]. |
+| [!UICONTROL 報表] | (3 月發行) 新的[!UICONTROL 家庭]報告顯示跨家庭層級之各種維度的曝光數、觸及率和頻率 (根據 IP 位址)，而不是裝置/Cookie 層級。該報告包含九個維度：[!UICONTROL 行銷活動]、[!UICONTROL 套件]、[!UICONTROL 版位]、[!UICONTROL 網站/應用程式]、[!UICONTROL 媒體類型]、[!UICONTROL 裝置]、[!UICONTROL 對象]、[!UICONTROL 創意長度]和使用者建立的[!UICONTROL 標記]。 |
 
 {style="table-layout:auto"}
 
@@ -629,9 +629,9 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising] 對象行銷活動；開放測試版功能；3月18日發行版本)觀眾行銷活動現在可以使用增強的CPC(eCPC)競標策略。 您可以在子廣告群組設定中設定競標。<br><br>具有eCPC的受眾行銷活動可納入產品組合，以進行最佳化。 |
-| [!UICONTROL 行銷活動], [!UICONTROL Portfolio] | ([!DNL Google Ads] 賬戶；開放測試版功能)現在提供最佳化支援， [!DNL Google Ads] 績效最大的促銷活動，而且您可以將它們新增至混合產品組合。 競標策略目標和促銷活動預算是在促銷活動層級設定。 |
-| [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 賬戶；3月18日發行版本)下列新的顯著度量可用於行銷活動管理檢視和報表：<ul><li><p>[!UICONTROL 內容為]:您在顯示/受眾網路上收到的廣告曝光次數除以您有資格收到的顯示廣告曝光次數預估數。</p><p>這個和其他的&quot;[!UICONTROL 內容]*」量度可用於內容廣告相關實體和相關基本報表中的所有促銷活動管理檢視中：  [!UICONTROL 搜尋引擎], [!UICONTROL 搜尋引擎帳戶], [!UICONTROL 行銷活動], [!UICONTROL 廣告群組]，和 [!UICONTROL Portfolio].</p></li><li><p>[!UICONTROL 內容丟失IS（預算）]:顯示/受眾網路上的廣告未收到的曝光預估百分比，因為您的每日或每月預算太低。<p></li><li><p>[!UICONTROL 內容遺失IS（排名）]:顯示/對象網路上的廣告因廣告排名不佳而未顯示的預估曝光百分比。</p></li><li><p>[!UICONTROL 搜索完全匹配IS]:與關鍵字完全匹配的搜尋所收到的曝光次數除以您有資格收到的完全匹配曝光次數預估數。</p><p>對於與搜尋廣告相關的實體，以及相關的基本報表，此量度可用於所有促銷活動管理檢視中：  [!UICONTROL 搜尋引擎], [!UICONTROL 搜尋引擎帳戶], [!UICONTROL 行銷活動], [!UICONTROL 廣告群組], [!UICONTROL 關鍵字], [!UICONTROL 產品組]，和 [!UICONTROL Portfolio]. 它們也在 [!UICONTROL 限制], [!UICONTROL 標籤分類]，和 [!UICONTROL 標籤值] 報表。</p></li></ul> |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising]對象行銷活動；公開 Beta 版功能；3 月 18 日發行) 對象行銷活動現在可以使用增強型 CPC (eCPC) 出價策略。您可以在子廣告群組設定中設定出價。<br><br>具有 eCPC 的對象行銷活動可以包含在產品組合中以最佳化。 |
+| [!UICONTROL 行銷活動]、[!UICONTROL 產品組合] | ([!DNL Google Ads] 帳戶；公開 Beta 版功能) [!DNL Google Ads] 最高成效行銷活動現在可使用最佳化支援，您可以將其新增到混合產品組合中。出價策略目標和行銷活動預算是在行銷活動層級設定的。 |
+| [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶；3 月 18 日發行) 行銷活動管理檢視和報告中提供了以下新的「顯眼程度」量度：<ul><li><p>[!UICONTROL 內容是]：您在顯示/對象網路上獲得的曝光數除以您有資格獲得的預計廣告曝光數。</p><p>這個和其他「[!UICONTROL 內容]*」量度可用於與內容廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]和[!UICONTROL 產品組合]。</p></li><li><p>[!UICONTROL 內容遺失是 (預算)]：由於您的每日或每月預算過低，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。<p></li><li><p>[!UICONTROL 內容遺失是 (排名)]：由於排名不佳，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。</p></li><li><p>[!UICONTROL 完全相符搜尋是]：與您的關鍵字完全相符之搜尋所獲得的曝光數除以您有資格獲得的估計完全相符曝光數。</p><p>這個量度可用於與搜尋廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]、[!UICONTROL 關鍵字]、[!UICONTROL 產品群組]和[!UICONTROL 產品組合]。它們也位在[!UICONTROL 規範]、[!UICONTROL 標籤分類]和[!UICONTROL 標籤值]報告中。</p></li></ul> |
 
 {style="table-layout:auto"}
 
