Updated by task 'AutomatedMDTask_1683830567763_TM-MT_1683830600753'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/264ad6eeeb05af620941cd57ceaf18c82faf019e

--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -5,7 +5,7 @@ doc-type: release notes
 last-update: April 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 0bef2225a21d7b8c5a241919106caeea6b5e3563
+source-git-commit: 264ad6eeeb05af620941cd57ceaf18c82faf019e
 workflow-type: tm+mt
 source-wordcount: '5766'
 ht-degree: 94%
@@ -689,7 +689,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4月15日發行版本)觀眾促銷活動現在可以使用「手動CPM」競標策略。 您可以在子廣告群組設定中設定出價。<br>&lt;brOptimization support isn&#39;t available for CPM campaigns. |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4月15日發行版本)觀眾促銷活動現在可以使用「手動CPM」競標策略。 您可以在子廣告群組設定中設定出價。<br><br>CPM促銷活動不提供最佳化支援。 |
 | [!UICONTROL Recommendations] | 6個新([!DNL Google Ads] 建議可從 [!UICONTROL 前瞻分析與報表] > [!UICONTROL Recommendations]:<ul><li>[!UICONTROL 回應式搜尋改善廣告強度]:改善回應式搜尋廣告廣告強度的建議</li><li>[!UICONTROL 將本機促銷活動升級至效能上限]:將舊版本機促銷活動升級至效能上限促銷活動</li><li>[!UICONTROL 將智慧型購物促銷活動升級至效能上限]:將舊版智慧型購物促銷活動升級至效能上限促銷活動</li><li>[!UICONTROL 預測集目標ROAS]:在預測會增加流量的季節性事件之前提高預算，並將競標策略從 [!DNL Maximize Conversion Value] to [!DNL Target ROAS]</li><li>[!UICONTROL 將目標CPA的出價提高到過低]:提高 [!DNL Target CPA] 值過低且轉換次數少或沒有轉換時，建議的量</li><li>[!UICONTROL 顯示展開選擇加入]:更新促銷活動以使用顯示擴展來擴展觸及</li></ul>因為新增和移除資產、變更促銷活動類型以及變更預算和競標策略都可能影響效能，我們建議您與Adobe客戶團隊討論每個建議的優點和缺點，以便您做出明智的決策。 |
 
 {style="table-layout:auto"}
